# Froschify

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  edit.py  justfile  local.env  main.py  monitor.sh  proxy.py  pyproject.toml  youtube.py
experiments/: moviepy_vs_ffmpeg.py
src/: config.py  edit.py  main.py  proxy.py  youtube.py
templates/: index.html
tests/: test_app.py
