[project]
name = "froschify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "moviepy>=2.1.1",
    "pytubefix>=8.10.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]
