[project]
name = "froschify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.6",
    "moviepy>=2.1.1",
    "pytubefix>=8.10.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "types-deprecated>=1.2.15.20241117",
    "types-pyyaml>=6.0.12.20241230",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20241016",
    "types-ujson>=5.10.0.20240515",
]
